# mx-wcc24-rs

./: README.md
game-arena-contract/: Cargo.toml  README.md
game-arena-contract/meta/: Cargo.toml
game-arena-contract/output/: game-arena-contract.abi.json  game-arena-contract.imports.json  game-arena-contract.mxsc.json  game-arena-contract.wasm
game-arena-contract/scenarios/: game_arena_contract.scen.json
game-arena-contract/src/: game_arena_contract.rs
game-arena-contract/tests/: game_arena_contract_scenario_go_test.rs  game_arena_contract_scenario_rs_test.rs
game-arena-contract/wasm/: Cargo.toml
token-manager-contract/: Cargo.toml  README.md  challenge.txt
token-manager-contract/meta/: Cargo.toml
token-manager-contract/output/: token-manager.abi.json  token-manager.imports.json  token-manager.mxsc.json  token-manager.wasm
token-manager-contract/scenarios/: token_manager.scen.json
token-manager-contract/src/: token-manager.rs  token_manager.rs
token-manager-contract/tests/: token_manager_scenario_go_test.rs  token_manager_scenario_rs_test.rs
token-manager-contract/wasm/: Cargo.toml
tools-contract/: Cargo.toml  README.md
tools-contract/meta/: Cargo.toml
tools-contract/nft-assets/: shield.json  sword.json
tools-contract/output/: tools-contract.abi.json  tools-contract.imports.json  tools-contract.mxsc.json  tools-contract.wasm
tools-contract/scenarios/: tools_contract.scen.json
tools-contract/src/: admin.rs  constants.rs  data.rs  lib.rs  storage.rs
tools-contract/tests/: tools_contract_scenario_go_test.rs  (+1 more)
(+112 files in other folders)
