[package]
name = "token-manager"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/token-manager.rs"

[dependencies.multiversx-sc]
version = "0.54.2"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.2"

[workspace]
members = [
    ".",
    "meta",
]
