[package]
name = "tools-contract"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.game-common-module]
path = "../game-common-module"

[dependencies.multiversx-sc]
version = "0.55.0"

[dev-dependencies]
num-bigint = "0.4.6"

[dev-dependencies.multiversx-sc-scenario]
version = "0.55.0"

[workspace]
members = [
    ".",
    "meta",
]
